fix broken css

--- a/scss/sweetp.scss
+++ b/scss/sweetp.scss
@@ -390,13 +390,17 @@ html#sweetp {
         }
     }
 
-    @media (max-width: 575.98px) html.composing.emoji-insert .composer {
-        bottom: calc(40%);
-        height: auto;
+    @media (max-width: 575.98px) {
+        html.composing.emoji-insert .composer {
+            bottom: calc(40%);
+            height: auto;
+        }
     }
 
-    @media (max-width: 575.98px) and (max-height: 600px) .emoji-dialog {
-        top: 60% !important;
+    @media (max-width: 575.98px) and (max-height: 600px) {
+        .emoji-dialog {
+            top: 60% !important;
+        }
     }
 
     @media (max-width: 575.97px) {
